# csc231-game

./: main.cpp  notes.md
assets/: items.txt
content/actions/: CMakeLists.txt  attack.cpp  attack.h  closedoor.cpp  closedoor.h  move.cpp  move.h  opendoor.cpp  opendoor.h  rest.cpp  steal.cpp  steal.h  wander.cpp  wander.h
content/entities/: heroes.cpp  heroes.h  monsters.cpp  monsters.h
content/events/: CMakeLists.txt  animation.cpp  animation.h  die.cpp  hit.cpp  hit.h  raise.cpp  sound.cpp  steal.cpp  steal.h  swing.cpp  swing.h  thrust.cpp  thrust.h
content/items/: CMakeLists.txt  staff.cpp  staff.h  sticky_hands.cpp  sticky_hands.h  sword.cpp  sword.h
engine/: entity.cpp  entity.h
engine/dungeon/: pathfinding.cpp
